--- a/Matmul/Matmul.csproj
+++ b/Matmul/Matmul.csproj
@@ -5,10 +5,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <PackageReference Include="SME" Version="0.4.2" />
     <PackageReference Include="SME.Tracer" Version="0.4.2" />
     <PackageReference Include="SME.VHDL" Version="0.4.2" />
-  </ItemGroup>
+  </ItemGroup>-->
 
+  <ItemGroup>
+    <ProjectReference Include="E:\git\sme-clean\src\SME\SME.csproj" />
+    <ProjectReference Include="E:\git\sme-clean\src\SME.Tracer\SME.Tracer.csproj" />
+    <ProjectReference Include="E:\git\sme-clean\src\SME.VHDL\SME.VHDL.csproj" />
+  </ItemGroup>
 </Project>
