--- a/Matmul/Matmul.csproj
+++ b/Matmul/Matmul.csproj
@@ -1,15 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-
-  <!--<ItemGroup>
+  <ItemGroup>
     <PackageReference Include="SME" Version="0.4.2" />
     <PackageReference Include="SME.Tracer" Version="0.4.2" />
     <PackageReference Include="SME.VHDL" Version="0.4.2" />
-  </ItemGroup>-->
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="E:\git\sme-clean\src\SME\SME.csproj" />
